--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
-  <title>Kaussen Servicos</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Em construção</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+    h1 {
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 1.2em;
+    }
+  </style>
 </head>
 <body>
-  <h1>Willkommen bei Kaussen Serviços</h1>
-  <p>Diese Seite ist live über GitHub Pages!</p>
+  <h1>Em construção</h1>
+  <p>Esta página está em construção.</p>
+
+  <h1>Under construction</h1>
+  <p>This page is under construction.</p>
+
+  <h1>Im Aufbau</h1>
+  <p>Diese Seite befindet sich im Aufbau.</p>
 </body>
 </html>
+
