--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       font-size: 2em;
     }
 
+    p {
+      font-size: 18px;
+      color: #333;
+    }
+
     img.logo {
       width: 200px;
       max-width: 80%;
@@ -43,11 +48,13 @@
 <body>
   <img src="Kaussen_Servicos_Logo_vector_weiss.png" alt="Kaussen Serviços Logo" class="logo">
 
-  <h1>Website im Aufbau</h1>
-  <p>Wir arbeiten daran, Ihnen bald etwas Besonderes zu bieten.</p>
+  <h1>Website em construção • Website im Aufbau • Website under construction</h1>
+  <p>Estamos trabalhando para trazer algo especial em breve.<br>
+     Wir arbeiten daran, Ihnen bald etwas Besonderes zu bieten.<br>
+     We’re working on something special for you.</p>
 
   <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank">
-    💬 WhatsApp Kontakt
+    💬 WhatsApp Kontakt • Contato • Contact
   </a>
 </body>
 </html>
