--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kaussen Serviços</title>
   <style>
     body {
@@ -23,7 +23,7 @@
     }
 
     img.logo {
-      width: 200px;
+      width: 300px;      /* Breite auf 300px erhöht */
       max-width: 80%;
       margin-bottom: 30px;
     }
@@ -46,14 +46,19 @@
   </style>
 </head>
 <body>
-  <img src="Kaussen_Servicos_Logo_vector_weiss.png" alt="Kaussen Serviços Logo" class="logo">
+  <!-- Pfad zur SVG-Datei anpassen, z.B. 'assets/...' falls im assets-Ordner -->
+  <img src="Kaussen_Servicos_Logo_vector_Trans_blau.svg" alt="Kaussen Serviços Logo" class="logo" />
 
   <h1>Website em construção • Website im Aufbau • Website under construction</h1>
-  <p>Estamos trabalhando para trazer algo especial em breve.<br>
-     Wir arbeiten daran, Ihnen bald etwas Besonderes zu bieten.<br>
+  <p>Estamos trabalhando para trazer algo especial em breve.<br />
+     Wir arbeiten daran, Ihnen bald etwas Besonderes zu bieten.<br />
      We’re working on something special for you.</p>
 
-  <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank">
+  <a
+    class="whatsapp-button"
+    href="https://wa.me/5511941188664"
+    target="_blank"
+  >
     💬 WhatsApp Kontakt • Contato • Contact
   </a>
 </body>
