--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <p><i class="fas fa-paint-roller"></i> Pintura e trabalhos de acabamento</p>
       <p><i class="fas fa-tools"></i> Reformas em geral</p>
       <p><i class="fas fa-hammer"></i> Drywall e divisórias</p>
-      <p><i class="fas fa-wrench"></i> Soldagem e estruturas metálicas</p>
+      <p><i class="fas fa-fire"></i> Soldagem e estruturas metálicas</p>
       <p><i class="fas fa-bolt"></i> Instalações elétricas</p>
     </div>
     <p style="margin-top: 30px;">
@@ -90,7 +90,7 @@
       <p><i class="fas fa-paint-roller"></i> Maler- und Lackierarbeiten</p>
       <p><i class="fas fa-tools"></i> Allgemeine Reformierungen</p>
       <p><i class="fas fa-hammer"></i> Trockenbau (Drywall)</p>
-      <p><i class="fas fa-wrench"></i> Schweißarbeiten</p>
+      <p><i class="fas fa-fire"></i> Schweißarbeiten</p>
       <p><i class="fas fa-bolt"></i> Elektroinstallationen</p>
     </div>
     <p style="margin-top: 30px;">
@@ -104,7 +104,7 @@
       <p><i class="fas fa-paint-roller"></i> Painting and finishing work</p>
       <p><i class="fas fa-tools"></i> General renovations</p>
       <p><i class="fas fa-hammer"></i> Drywall and partitions</p>
-      <p><i class="fas fa-wrench"></i> Welding and metal structures</p>
+      <p><i class="fas fa-fire"></i> Welding and metal structures</p>
       <p><i class="fas fa-bolt"></i> Electrical installations</p>
     </div>
     <p style="margin-top: 30px;">
@@ -125,4 +125,5 @@
   </script>
 </body>
 </html>
+
 
