Update11082025 index.html

--- a/index.html
+++ b/index.html
@@ -4,129 +4,192 @@
   <meta charset="UTF-8">
   <title>Kaussen Serviços</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
+    :root{
+      --header-height: 360px; /* anpassen wenn du andere Höhe willst */
+    }
+    *{box-sizing: border-box}
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 40px;
       background-color: #f4f4f4;
       text-align: center;
       color: #333;
     }
 
-    img.logo {
-      max-width: 300px;
-      display: block;
-      margin: 0 auto 30px auto;
+    /* Fixierter Header */
+    .header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: var(--header-height);
+      z-index: 1000;
+      overflow: hidden; /* Bild beschneidet, wenn nötig */
+      box-shadow: 0 2px 8px rgba(0,0,0,0.12);
     }
 
-    select {
+    /* Header Bild (Vorher / Nachher) */
+    .header .header-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* füllt den Header, schneidet bei Bedarf zu */
       display: block;
-      margin: 0 auto 20px auto;
-      padding: 8px;
-      font-size: 1em;
     }
 
+    /* Logo oben links */
+    .logo {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      width: 110px;    /* verkleinert */
+      height: auto;
+      z-index: 1010;   /* über dem Header-Bild */
+      background: rgba(255,255,255,0.0); /* optional: weißer Hintergrund z.B. rgba(255,255,255,0.8) */
+      padding: 4px;
+      border-radius: 4px;
+    }
+
+    /* Sprachauswahl oben rechts */
+    .language-select {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      z-index: 1010;
+      padding: 8px 10px;
+      border-radius: 6px;
+      border: 1px solid rgba(0,0,0,0.08);
+      background: rgba(255,255,255,0.9);
+      font-size: 0.95rem;
+    }
+
+    /* Optional: halbtransparenter Overlay-Text (z.B. Slogan) */
+    .header .overlay {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 18px;
+      z-index: 1010;
+      color: #fff;
+      text-shadow: 0 2px 6px rgba(0,0,0,0.5);
+      font-size: 1.05rem;
+      background: rgba(0,0,0,0.25);
+      padding: 6px 12px;
+      border-radius: 6px;
+    }
+
+    /* Platzhalter für Content, damit Header nicht überlappt */
     .content {
-      max-width: 700px;
-      margin: auto;
-      font-size: 1.2em;
-      color: #333;
+      max-width: 900px;
+      margin: 0 auto;
       text-align: left;
+      padding: 24px;
+      padding-top: calc(var(--header-height) + 30px);
     }
 
-    .services {
-      margin-top: 20px;
-      line-height: 2;
-    }
-
-    .services i {
-      color: #0077cc;
-      margin-right: 10px;
-    }
+    .services { line-height: 1.9; }
+    .services i { color: #0077cc; margin-right: 10px; }
 
     .whatsapp-button {
       display: inline-block;
-      margin-top: 40px;
+      margin-top: 30px;
       padding: 12px 20px;
       background-color: #25D366;
       color: white;
       font-weight: bold;
       text-decoration: none;
       border-radius: 5px;
-      font-size: 1.1em;
+      font-size: 1.05em;
     }
 
-    .whatsapp-button i {
-      margin-right: 8px;
+    /* Responsive: bei kleinen Bildschirmen Header-Höhe reduzieren */
+    @media (max-width: 720px){
+      :root{ --header-height: 240px; }
+      .logo{ width: 86px; }
+      .header .overlay{ font-size: 0.9rem; bottom: 10px; }
     }
   </style>
 </head>
 <body>
-  <img src="Kaussen_Servicos_Logo_vector_Trans_blau.svg" alt="Kaussen Serviços Logo" class="logo">
 
-  <select onchange="changeLanguage(this.value)">
-    <option value="pt">Português</option>
-    <option value="de">Deutsch</option>
-    <option value="en">English</option>
-  </select>
+  <!-- Fixierter Header mit generiertem Vorher/Nachher-Bild -->
+  <header class="header" role="banner">
+    <!-- Bild: ersetze dateiname falls nötig -->
+    <img src="vorher-nachher-generated.jpg" alt="Vorher und Nachher Renovierung" class="header-img">
 
-  <div id="content-pt" class="content">
-    <h1>Kaussen Serviços – Soluções completas para sua obra</h1>
-    <div class="services">
-      <p><i class="fas fa-paint-roller"></i> Pintura e trabalhos de acabamento</p>
-      <p><i class="fas fa-tools"></i> Reformas em geral</p>
-      <p><i class="fas fa-hammer"></i> Drywall e divisórias</p>
-      <p><i class="fas fa-fire"></i> Soldagem e estruturas metálicas</p>
-      <p><i class="fas fa-bolt"></i> Instalações elétricas</p>
+    <!-- Logo (klein oben links) -->
+    <img src="Kaussen_Servicos_Logo_vector_Trans_blau.svg" alt="Kaussen Serviços" class="logo">
+
+    <!-- Sprache oben rechts -->
+    <select class="language-select" onchange="changeLanguage(this.value)" aria-label="Sprache wählen">
+      <option value="pt">Português</option>
+      <option value="de">Deutsch</option>
+      <option value="en">English</option>
+    </select>
+
+    <!-- Optionaler Slogan über dem Bild -->
+    <div class="overlay">Renovação com qualidade | Kaussen Serviços</div>
+  </header>
+
+  <!-- Hauptinhalt -->
+  <main class="content" role="main">
+    <div id="content-pt">
+      <h1>Kaussen Serviços – Soluções completas para sua obra</h1>
+      <div class="services">
+        <p><i class="fas fa-paint-roller"></i> Pintura e trabalhos de acabamento</p>
+        <p><i class="fas fa-tools"></i> Reformas em geral</p>
+        <p><i class="fas fa-hammer"></i> Drywall e divisórias</p>
+        <p><i class="fas fa-fire"></i> Soldagem e estruturas metálicas</p>
+        <p><i class="fas fa-bolt"></i> Instalações elétricas</p>
+      </div>
+      <p style="margin-top: 20px;">Atendimento com excelência e dedicação em cada projeto.</p>
     </div>
-    <p style="margin-top: 30px;">
-      Atendimento com excelência e dedicação em cada projeto.
-    </p>
-  </div>
 
-  <div id="content-de" class="content" style="display:none;">
-    <h1>Kaussen Serviços – Ihr Partner für Bau und Renovierung</h1>
-    <div class="services">
-      <p><i class="fas fa-paint-roller"></i> Maler- und Lackierarbeiten</p>
-      <p><i class="fas fa-tools"></i> Allgemeine Reformierungen</p>
-      <p><i class="fas fa-hammer"></i> Trockenbau (Drywall)</p>
-      <p><i class="fas fa-fire"></i> Schweißarbeiten</p>
-      <p><i class="fas fa-bolt"></i> Elektroinstallationen</p>
+    <div id="content-de" style="display:none">
+      <h1>Kaussen Serviços – Ihr Partner für Bau und Renovierung</h1>
+      <div class="services">
+        <p><i class="fas fa-paint-roller"></i> Maler- und Lackierarbeiten</p>
+        <p><i class="fas fa-tools"></i> Allgemeine Reformierungen</p>
+        <p><i class="fas fa-hammer"></i> Trockenbau (Drywall)</p>
+        <p><i class="fas fa-fire"></i> Schweißarbeiten</p>
+        <p><i class="fas fa-bolt"></i> Elektroinstallationen</p>
+      </div>
+      <p style="margin-top: 20px;">Verlassen Sie sich auf Qualität, Zuverlässigkeit und brasilianisches Handwerkskönnen.</p>
     </div>
-    <p style="margin-top: 30px;">
-      Verlassen Sie sich auf Qualität, Zuverlässigkeit und brasilianisches Handwerkskönnen.
-    </p>
-  </div>
 
-  <div id="content-en" class="content" style="display:none;">
-    <h1>Kaussen Serviços – Complete solutions for your construction needs</h1>
-    <div class="services">
-      <p><i class="fas fa-paint-roller"></i> Painting and finishing work</p>
-      <p><i class="fas fa-tools"></i> General renovations</p>
-      <p><i class="fas fa-hammer"></i> Drywall and partitions</p>
-      <p><i class="fas fa-fire"></i> Welding and metal structures</p>
-      <p><i class="fas fa-bolt"></i> Electrical installations</p>
+    <div id="content-en" style="display:none">
+      <h1>Kaussen Serviços – Complete solutions for your construction needs</h1>
+      <div class="services">
+        <p><i class="fas fa-paint-roller"></i> Painting and finishing work</p>
+        <p><i class="fas fa-tools"></i> General renovations</p>
+        <p><i class="fas fa-hammer"></i> Drywall and partitions</p>
+        <p><i class="fas fa-fire"></i> Welding and metal structures</p>
+        <p><i class="fas fa-bolt"></i> Electrical installations</p>
+      </div>
+      <p style="margin-top: 20px;">Excellence and dedication in every project.</p>
     </div>
-    <p style="margin-top: 30px;">
-      Excellence and dedication in every project.
-    </p>
-  </div>
 
-  <a class="whatsapp-button" href="https://wa.me/55872241042" target="_blank">
-    <i class="fab fa-whatsapp"></i> Fale conosco pelo WhatsApp
-  </a>
+    <a class="whatsapp-button" href="https://wa.me/55872241042" target="_blank" rel="noopener">
+      <i class="fab fa-whatsapp"></i> Fale conosco pelo WhatsApp
+    </a>
+
+    <!-- Demo-Filler, damit Scroll sichtbar wird -->
+    <section style="margin-top:40px;">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ... (füge hier echten Inhalt ein)</p>
+      <p style="height:1200px"></p>
+    </section>
+  </main>
 
   <script>
     function changeLanguage(lang) {
-      document.getElementById('content-pt').style.display = lang === 'pt' ? 'block' : 'none';
-      document.getElementById('content-de').style.display = lang === 'de' ? 'block' : 'none';
-      document.getElementById('content-en').style.display = lang === 'en' ? 'block' : 'none';
+      document.getElementById('content-pt').style.display = (lang === 'pt') ? 'block' : 'none';
+      document.getElementById('content-de').style.display = (lang === 'de') ? 'block' : 'none';
+      document.getElementById('content-en').style.display = (lang === 'en') ? 'block' : 'none';
     }
   </script>
 </body>
 </html>
-
 
 
 
