--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <!-- Fixierter Header mit generiertem Vorher/Nachher-Bild -->
   <header class="header" role="banner">
     <!-- Bild: ersetze dateiname falls nötig -->
-    <img src="vorher-nachher-generated.jpg" alt="Vorher und Nachher Renovierung" class="header-img">
+    <img src="Renovierung im Vergleich.png" alt="Vorher und Nachher Renovierung" class="header-img">
 
     <!-- Logo (klein oben links) -->
     <img src="Kaussen_Servicos_Logo_vector_Trans_blau.svg" alt="Kaussen Serviços" class="logo">
